[fixes][fast delivery promotion] js/html texts updates

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -86,7 +86,7 @@ ruby:
                         span.fit-guarantee.menu-icon
                         | Fit Guarantee
               .mega-menu--secondary
-                a.mega-menu-banner href="/getitfirst"
+                = link_to fast_making_dresses_path, class: 'mega-menu-banner' do
                   = image_tag 'mega-menu/express-making.jpg', alt: 'Get it Quick - Dress made for you in 48 hours'
                 .container-fluid.max-width-100
                   .row
