--- a/app/views/products/details/_side_panel_colours.html.slim
+++ b/app/views/products/details/_side_panel_colours.html.slim
@@ -16,6 +16,8 @@
     .row
       .col-md-12.custom
         h2=  "Custom Colors +#{@product.custom_color_price}"
+        p.explanation style="text-align: center; display: none"
+          Express making is only available on our recommended colours
 
         - @product.custom_color_options.each_slice(2) do |colors|
             - colors.each do |color|
