--- a/app/views/spree/order_mailer/confirm_email.html.slim
+++ b/app/views/spree/order_mailer/confirm_email.html.slim
@@ -39,6 +39,7 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
                         td style="color: #000; font-size: 13px; text-align: left; font-weight: 400; padding: 7px 6px; vertical-align: top;"
                           div style="font-weight: 700" => raw(item.variant.product.name)
                           div => raw(item.options_text)
+                          div style="font-weight: 700" = item.making_options_text
                         td style="color: #000; font-size: 13px; text-align: left; font-weight: 400; padding: 7px 6px; vertical-align: top;" => item.variant.sku
                         td style="color: #000; font-size: 13px; text-align: left; font-weight: 400; padding: 7px 6px; vertical-align: top;" => item.quantity
                         td style="color: #000; font-size: 13px; text-align: left; font-weight: 700; padding: 7px 6px; vertical-align: top;" => item.display_amount
