--- a/app/views/spree/order_mailer/production_order_email.html.slim
+++ b/app/views/spree/order_mailer/production_order_email.html.slim
@@ -49,6 +49,10 @@ table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="
                     th Delivery Date:
                     td = order.projected_delivery_date
 
+                  - if item.making_options.present?
+                    tr
+                      th Making Options
+                      td = item.making_options.map{|option| option.name.upcase }.join(', ')
                   tr
                     th Customizations:
                     td
