--- a/app/views/spree/order_mailer/team_confirm_email.text.erb
+++ b/app/views/spree/order_mailer/team_confirm_email.text.erb
@@ -2,7 +2,7 @@
 <%= t('order_mailer.confirm_email.order_summary') %>
 ============================================================
 <% @order.line_items.each do |item| %>
-  <%= item.variant.sku %> <%= raw(item.variant.product.name) %> <%= raw(item.options_text) -%> (<%=item.quantity%>) @ <%= item.variant.display_amount %> = <%= item.display_amount %>
+  <%= item.variant.sku %> <%= raw(item.variant.product.name) %> <%= raw(item.making_options_text) %><%= raw(item.options_text) -%> (<%=item.quantity%>) @ <%= item.variant.display_amount %> = <%= item.display_amount %>
 <% end %>
 ============================================================
 <%= t('order_mailer.confirm_email.subtotal', :subtotal => @order.display_item_total) %>
