--- a/app/views/spree/order_mailer/production_order_email.html.slim
+++ b/app/views/spree/order_mailer/production_order_email.html.slim
@@ -47,7 +47,7 @@ table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="
 
                   tr
                     th Delivery Date:
-                    td = order.projected_delivery_date
+                    td = item.projected_delivery_date
 
                   - if item.making_options.present?
                     tr
