--- a/app/views/products/details/_size_chart_table.html.slim
+++ b/app/views/products/details/_size_chart_table.html.slim
@@ -20,3 +20,6 @@ table.table.size-guide
       tr
         - size.map do |key, value|
           td data-title=key = value
+
+- if current_site_version.is_australia?
+  p style="text-align:center" All of our garments are in AU sizes for Australian customers
