[feat][admin] add FabricCard to SpreeProduct

--- a/app/views/admin/fabric_cards/show.html.slim
+++ b/app/views/admin/fabric_cards/show.html.slim
@@ -24,3 +24,12 @@ table
       tr
         td = colour.name
         td = colour.position
+
+h3 Products
+table
+  thead : tr
+    th Name
+  tbody
+    - fabric_card.spree_products.each do |product|
+      tr
+        td = link_to product.name, admin_product_path(product)
