--- a/app/views/spree/admin/products/_form.html.erb
+++ b/app/views/spree/admin/products/_form.html.erb
@@ -174,6 +174,12 @@
       <%= f.error_message_on :factory %>
   <% end %>
 
+  <%= f.field_container :fabric_card do %>
+      <%= f.label :fabric_card_id, t(:fabric_card) %>
+      <%= f.collection_select :fabric_card_id, FabricCard.all, :id, :name, {:include_blank => true}, {:class => 'select2'} %>
+      <%= f.error_message_on :fabric_card %>
+  <% end %>
+
   <!-- <h2><%= t(:metadata) %></h2> -->
   <div data-hook="admin_product_form_meta" class="alpha omega twelve columns">
     <%= f.field_container :meta_keywords do %>
