[CONTENT]: update terms

--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -9,24 +9,11 @@
 
       p Welcome to Fame &amp; Partners! This Web site located at www.fameandpartners.com (this "Site") is owned and operated by Fame &amp; Partners Pty Ltd ("Company"). This Site and any purchases made through this Site are governed by the terms of service, use and purchase described below ("Terms").
 
-      p Fame &amp; Partners is committed to ensuring every girl discovers and crafts the coolest and most individual look for her, for her special occasion. We were founded in Bondi Beach, Australia but now have offices in New York, United States too! We ship internationally with a secure courier service and have customer service on call to work with our customers, wherever they may be. Enjoy your shopping experience with Fame &amp; Partners and don’t be afraid to give us feedback at: team@fameandpartners.com.
+      p Fame &amp; Partners is committed to ensuring every girl discovers and crafts the coolest and most individual look for her special occasion. We were founded in Bondi Beach, Australia but now have offices in New York as well. We ship internationally with a secure courier service and have customer service on call to work with our customers, wherever they may be. Enjoy your shopping experience with Fame &amp; Partners and don’t be afraid to give us feedback at: team@fameandpartners.com.
 
-      p By using this Site, purchasing products and services through this Site, and/or enrolling in the Fame &amp; Partners Membership Program, you agree to be bound by these terms, so please review this entire page carefully. These Terms are designed to clearly provide you with a description of the Fame &amp; Partners Membership Program and general terms and conditions regarding purchasing products and services from Fame &amp; Partners and use of this Site.
+      p By using this Site, purchasing products and services through this Site, you agree to be bound by these terms, so please review this entire page carefully. These terms are designed to clearly provide you with a description of the Fame &amp; Partners general terms and conditions regarding purchasing products and services from Fame &amp; Partners and use of this Site
 
       p You must be at least 15 years old to purchase Fame &amp; Partners products from this Site or use the Fame &amp; Partners services. The Company reserves the right in its discretion to revise the Terms from time to time so please check back here periodically for updates. By continuing to use or purchase products from this Site and/or by remaining a member of the Fame &amp; Partners Membership Program, you accept and agree to the Company's right to revise the Terms from time to time and to be bound by such changes, so long as they are promptly posted on the Site. If you do not wish to be bound to these Terms (or any revisions to these Terms), please do not use this Site or the Company's services and immediately cancel your Fame &amp; Partners Membership by emailing team@fameandpartners.com.
-
-      h2 FAME &amp; PARTNERS MEMBERSHIP
-
-      p Fame &amp; Partners provides a monthly membership program that grants you access to style experts, special offers and the latest formal fashion trends. To get started, simply take our Style Profiling Quiz. As part of this process, you will register and create a member account through this Site ("Account"). After you have successfully created an Account, you will be presented with a range of products and services that are tailored to you ("Personalised Boutique"), and you’ll be automatically enrolled in the Fame &amp; Partners Membership Program where you will receive emails, newsletters, special offers and other updates to maximize your shopping experience. There is no registration fee and no obligation to purchase. On an ongoing basis our Fame &amp; Partners style experts will continue to determine which formal dresses best match your personality and style, while you are a member.
-
-      h2 MEMBER PERKS - VIP PRICING
-
-      ul
-        li As a Fame &amp; Partners Member, you will be able to purchase Fame &amp; Partners branded items for a discount from time to time, including, but not limited to, dresses, tops, skirts and other fashion items.
-
-        li In addition, the site will occasionally collaborate with premier trendsetting partners to offer specialty items at exclusive members-only prices.
-
-        li You will also receive emails, newsletters, special offers and other updates to maximize your shopping experience.
 
       h2 SHIPPING
 
@@ -34,7 +21,7 @@
 
       = render "shipping_tables"
 
-      p As soon as your order ships, you will be provided with a tracking number via email. You can also find your order details and tracking information on the My Orders tab within the Account Settings section.
+      p As soon as your order ships, you will be provided with a tracking number. You can find your order details and tracking information on the My Orders tab within the Account Settings section.
 
       p All orders with sale items will be charged a shipping fee of $11.70.
 
@@ -43,11 +30,11 @@
       p If for any reason you are not happy with your selection, you can exchange an item for another item, or return it for a refund, subject to the following terms and limitations:
 
       ul
-        li You can exchange your purchase for another item, or return it for a refund within 30 days of purchase, unless you acquired it (them) with a Fame & Partners credit. Any items acquired with a Fame & Partners credit can only be exchanged or returned for a credit.
+        li You can exchange your purchase for another item, or return it for a refund within 30 days of purchase, unless you acquired it/them with a Fame &amp; Partners credit. Any items acquired with a Fame &amp; Partners credit can only be exchanged or returned for a credit.
 
-        li We only accept returns or exchanges up to 30 days from the original date of shipment. Any item to be returned or exchanged must be in new, unused and resalable condition, with the DO NOT REMOVE tag still attached in the same place as originally sent. We photograph every product as part of our QA process so we know where the DO NOT REMOVE tag was attached. Any exchange or return should be sent back in the original, undamaged packaging, plus any accessories or extras that may have been included with the shipment. For full priced garments, we do not charge a restocking fee. For any discounted items, we charge a $14.95 restocking fee when returned for a refund. Items exchanged for another item or returned for a credit are not charged a restocking fee. Exchanges will only be allowed for size changes within 1 dress size, for example a dress ordered in size 10 can be exchanged for a size 8 or 12.
+        li We only accept returns or exchanges up to 30 days from the original date of shipment. Any item to be returned or exchanged must be in new, unused and resalable condition, with the DO NOT REMOVE tag still attached in the same place as originally sent. We photograph every product as part of our QA process so we know where the DO NOT REMOVE tag was attached. Any exchange or return should be sent back in the original, undamaged packaging, plus any accessories or extras that may have been included with the shipment. For full priced garments, we do not charge a restocking fee unless they are customised. For any discounted items, including but not limited to sale items and items purchased with a discount code we charge a $14.95 restocking fee, when returned for a refund. Items exchanged for another item or returned for a credit are not charged a restocking fee.
 
-        li If you purchase multiple sizes in one style/colour we will only accept an exchange for the returning sizes. We do not offer refunds if you are returning for this reason. If you are confused about your size, simply contact our friendly customer service team to assist you in working out best fit for you.
+        li If you purchase multiple sizes in one style/colour we will only accept an exchange for the returning sizes. We do not offer refunds if you are returning for this reason. If you are confused about your size, simply contact our friendly customer service team at team@fameandpartners.com to assist you in working out best fit for you.
 
         li If your purchase includes more than 1 style in the same size, we can only offer a full refund for 1 style; if you would like to return more from this order, we can offer an exchange or credit if you meet all other returns criteria.
 
@@ -57,7 +44,7 @@
 
       h2 COLOURS &amp; MATERIALS
 
-      p Fame &amp; Partners makes custom, on-demand dresses and as part of our bespoke customised process we often use small runs of special materials and dip dye some fabrics to ensure every dress is unique to every customer! We understand you want to know what your special dress should look like when it arrives at your door, so we sometimes use digital colour replication on our Web site to show all the different colour variations you can select from. Therefore, while we're doing our best to show colours and material variations digitally across all different computer and mobile screens our customers use, we want you to understand that the digital colours and materials as they appear and are described on this Web site may not perfectly match the colours and materials of our actual garments and some slight variations may occur.
+      p Fame &amp; Partners makes custom, on-demand dresses and as part of our bespoke customised process we often use small runs of special materials and dip dye some fabrics to ensure every dress is unique to every customer. We understand you want to know what your special dress should look like when it arrives at your door, so we sometimes use digital colour replication on our Web site to show all the different colour variations you can select from. Therefore, while we're doing our best to show colours and material variations digitally across all different computer and mobile screens our customers use, we want you to understand that the digital colours and materials as they appear and are described on this Web site may not perfectly match the colours and materials of our actual garments and some slight variations may occur.
 
       h2 GST
 
@@ -191,4 +178,4 @@
 
       p The failure of the Company to exercise or enforce any right or provision of these Terms shall not constitute a waiver or relinquishment to any extent of the Company's right to assert or rely upon any such provision or right in that or any other instance, and the same shall be and remain in full force and effect. If any provision of these Terms is found by a court of competent jurisdiction, statute, rule or otherwise to be invalid, the parties nevertheless agree that the remaining provisions shall not be affected thereby and shall continue in full force and effect, and such provision may be modified or severed from these Terms to the extent necessary to make such provision enforceable and consistent with the remainder of these Terms.
 
-      p Updated February 2014
+      p Updated May 2015
