--- a/app/views/statics/faqs.html.slim
+++ b/app/views/statics/faqs.html.slim
@@ -11,25 +11,32 @@
       h2 ABOUT US
       h3 Do you have any store locations?
       p
-        | We are an online fashion boutique which means you can shop with us 24/7from Australia and United States but internationally, very soon!
+        | We are an online fashion boutique which means you can shop with us 24/7 from all over the world. To check if we currently offer shipping to your country please email team@fameandpartners.com
         br
         |We are currently looking at cities to do pop up stores in, if you would like to see us have one at a location near you, email team@fameandpartners.com with your suggestion.
 
       h2 ORDERS
 
+      h3 What is express making?
+
+      p
+        |With our express making we offer our customers the opportunity to have their dress made in 48 hours / 2 business days at the additional charge of $29. This is limited to certain styles and colours which can be viewed on the website here &nbsp;
+        a href="www.fameandpartners.com/au/getitquick" www.fameandpartners.com/au/getitquick
+
+
       h3 How can I track my order?
-      p As soon as your order ships, you will be provided with a tracking number via email. You can also find your order details and tracking information on the My Orders tab within the Account Settings section, which you can access when you are logged in. If you did not create a username/password or sign up when you purchased your dress, you will need to do so, to track your order.
+      h4 You can now track you order in My Account.
+      p Login to your account and select the My Orders tab. Here you will be able to see if your dress has been shipped yet. The two statuses are not yet shipped or a tracking number. The tracking number will link through to our local courier service so you will be able to login to their portal and track where you order is.
 
       h3 Can I cancel my order?
       p If you would like to cancel your order, please email team@fameandpartners.com immediately with your cancellation request and order number.
-      p If your dress is customised we cannot accept cancellations after 24 hours of purchasing.
-      p If you wish to cancel your order outside of 24 hours, we can offer you a 50% refund and a 50% credit note or a full store credit note for future purchases with Fame & Partners.
+      p If your dress is customised we cannot accept cancellations after 24 hours of purchasing. This is because your dress is already in production. If you wish to cancel your order outside of 24 hours, we can offer you a 50% refund and a 50% credit note with Fame & Partners. This is because the fabric has already been purchased and production started on your custom dress and in most cases we can not resell your dress at retail price.
 
       h2 Shipping & Deliveries
 
       h3 When will my order ship?
 
-      p Shipping times vary depending on the complexity of any customisations you might order. All of our dresses are made on demand and making will commence the day your order is received. Our make time varies depending on customisations; between 4 - 8 business days which means you will receive your dress in up to 10 business days. We recommend allowing 2 weeks from the date of your purchase to ensure you have enough time for your dress to arrive for your special event. If you need a dress faster, simply contact our customer service team who can explain our express dress making service where you can receive your dress in 5 business days!
+      p Shipping times vary depending on the complexity of any customisations you might order. All of our dresses are made on demand and making will commence the day your order is received. Our make time varies depending on customisations; between 4 - 8 business days which means you will receive your dress in up to 10 business days. We recommend allowing 2 weeks from the date of your purchase to ensure you have enough time for your dress to arrive for your special event.
 
       p Please note: Orders are not shipped on the weekends or holidays.
 
@@ -38,17 +45,19 @@
 
       = render 'shipping_tables'
 
+      p Please note that we have no control over delivery times and that unexpected delays may be possible due to customs.
+
       h2 RETURNS
       h3 What is your returns policy?
 
       p If for any reason you are not happy with your selection, you can exchange an item for another item, or return it for a refund, subject to the following terms and limitations:
 
       ul
-        li You can exchange your purchase for another item, or return it for a refund within 30 days of purchase, unless you acquired it (them) with a Fame & Partners credit. Any items acquired with a Fame & Partners credit can only be exchanged or returned for a credit.
+        li You can exchange your purchase for another item, or return it for a refund within 30 days of purchase, unless you acquired it/them with a Fame & Partners credit. Any items acquired with a Fame & Partners credit can only be exchanged or returned for a credit.
 
-        li We only accept returns or exchanges up to 30 days from the original date of shipment. Any item to be returned or exchanged must be in new, unused and resalable condition, with the DO NOT REMOVE tag still attached in the same place as originally sent. We photograph every product as part of our QA process so we know where the DO NOT REMOVE tag was attached. Any exchange or return should be sent back in the original, undamaged packaging, plus any accessories or extras that may have been included with the shipment. For full priced garments, we do not charge a restocking fee. For any discounted items, we charge a $14.95 restocking fee when returned for a refund. Items exchanged for another item or returned for a credit are not charged a restocking fee. Exchanges will only be allowed for size changes within 1 dress size, for example a dress ordered in size 10 can be exchanged for a size 8 or 12.
+        li We only accept returns or exchanges up to 30 days from the original date of shipment. Any item to be returned or exchanged must be in new, unused and resalable condition, with the DO NOT REMOVE tag still attached in the same place as originally sent. We photograph every product as part of our QA process so we know where the DO NOT REMOVE tag was attached. Any exchange or return should be sent back in the original, undamaged packaging, plus any accessories or extras that may have been included with the shipment. For full priced garments, we do not charge a restocking fee unless they are customised. For any discounted items, including but not limited to sale items and items purchased with a discount code we charge a $14.95 restocking fee, when returned for a refund. Items exchanged for another item or returned for a credit are not charged a restocking fee.
 
-        li If you purchase multiple sizes in one style/colour we will only accept an exchange for the returning sizes. We do not offer refunds if you are returning for this reason. If you are confused about your size, simply contact our friendly customer service team to assist you in working out best fit for you.
+        li If you purchase multiple sizes in one style/colour we will only accept an exchange for the returning sizes. We do not offer refunds if you are returning for this reason. If you are confused about your size, simply contact our friendly customer service team at team@fameandpartners.com to assist you in working out best fit for you.
 
         li If your purchase includes more than 1 style in the same size, we can only offer a full refund for 1 style; if you would like to return more from this order, we can offer an exchange or credit if you meet all other returns criteria.
 
@@ -57,9 +66,9 @@
       = render 'returns'
 
       h3 Can I exchange for a different size or colour?
-      p Of course! It is completely free to return for a different size, up or down one size. It is also completely free to return for a different recommended colour. If you ordered a custom colour, we will charge a restocking fee of 50% of the garment, if you would like to exchange for a different colour.
-      p If you would like to exchange an item, simply email Customer Service on: team@fameandpartners.com to confirm you would like to do so. Then follow the simple steps below.
+      p Of course! It is completely free, provided you are in Australia or the US to return for a different size. It is also completely free to return for a different recommended colour. If you ordered a customisation, including custom colours, we will charge a restocking fee of 50% of the garments purchase price this is because we can not resell a custom dress at retail value.
 
+      p If you would like to exchange or return an item, simply follow the steps below.
 
       h3 What are the steps I follow to return or exchange an item?
 
@@ -67,7 +76,8 @@
 
       h4 For Returns:
       ol
-        li Email team@fameandpartners.com with your order number and the word RETURN in the subject of the email, to confirm you would like to return, including the reason for your return
+        li You can now submit your returns request via the My Account section of our website. To do so please login to your account and click on the My Orders tab. On the right hand side you will see a column titled return or exchange. Select the relevant order in this column. You will be redirected to the returns page where you will be able to select the individual items which you would like to return. Select the appropriate reason for your return and submit the form our customer service team will be in contact soon after to advise you of the following steps.
+
         li
           ' Complete the form that was included in your package or download the form here:
           a href="#{image_path('returnform.pdf')}" Returns & Exchanges Authorisation Form
@@ -99,12 +109,12 @@
             br
             ' AUSTRALIA
 
-        li We will be in touch once we receive, review and can confirm your refund, which will include the cost of your returns postage.
+        li We will be in touch once we receive, review and can confirm your refund, which will include the cost of your returns postage provided you are in Australia or the US and can provide us with a recipt.
 
       h4 For Exchanges:
       ol
-        li Email team@fameandpartners.com with your order number and the word EXCHANGE in the subject of the email, to confirm you would like to exchange, including the reason for your exchange and what you would like to exchange for
-        li A Customer Service person will be in touch to confirm you can exchange your garment
+        li You can know submit your exchange  request via the My Account section of our website. To do so please login to your account and click on the My Orders tab. On the right hand side you will see a column titled return or exchange. Select the relevant order in this column. You will be redirected to the returns page where you will be able to select the individual items which you would like to exchange. Select the appropriate reason for you return or exchange and submit the form our customer service team will be in contact soon after to advise you of the following steps.
+
         li
           ' Complete the form that was included in your package or download the form here:
           a href="#{image_path('returnform.pdf')}" Returns & Exchanges Authorisation Form
@@ -113,7 +123,7 @@
           p
             i For United States Customers:
             br
-            ' Fame & Partners
+            ' Fame &amp; Partners
             br
             ' RETURNS
             br
@@ -126,7 +136,7 @@
           p
             i For Australian Customers:
             br
-            ' Fame & Partners
+            ' Fame &amp; Partners
             br
             ' RETURNS
             br
