[feat] make express option selected by default

--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -39,7 +39,8 @@ ruby:
           },
           making_options_input: {
             container:  '#product-making-options-content',
-            action:     '#product-making-options-action'
+            action:     '#product-making-options-action',
+            value:      '#{ raw @product.making_option_id }'
           }
         },
         moodboard_links: {
