--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -11,6 +11,11 @@
           = link_to 'Why Shop With Us', why_us_path
         li.footer-nav--item
           = link_to 'About Us', about_us_path
+
+        - if current_site_version.is_australia?
+          li.footer-nav--item
+            = link_to 'Fashion IT Girl', '/au/fashionitgirlau2015'
+
         li.footer-nav--item
           = link_to 'FAQs & Shipping', faqs_path
         li.footer-nav--item
