fix mega menu banner image

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -87,7 +87,7 @@ ruby:
                         | Fit Guarantee
               .mega-menu--secondary
                 = link_to fast_making_dresses_path, class: 'mega-menu-banner' do
-                  = image_tag 'mega-menu/express-making.jpg', alt: 'Get it Quick - Dress made for you in 48 hours'
+                  = image_tag 'mega-menu/express-making.jpg', alt: 'Get it Quick - Dress made for you in 48 hours', class: 'img-responsive'
                 .container-fluid.max-width-100
                   .row
                     .col-md-3.col-lg-2.col-md-offset-4
