--- a/app/views/users/wishlists_items/index.html.slim
+++ b/app/views/users/wishlists_items/index.html.slim
@@ -41,7 +41,7 @@ javascript:
 .user-account-page-title
   .container
     .page-title--details
-      h1.user-account-title.no-padding-bottom.text-white My style profile
+      h1.user-account-title.no-padding-bottom.text-white = @moodboard.title
 
 .page-content.user.moodboard.index
   .container.relative
