--- a/app/views/users/orders/index.js.erb
+++ b/app/views/users/orders/index.js.erb
@@ -1,6 +1,7 @@
 html = '<%=j  render(template: 'users/orders/index.html') %>';
 
 $('body > .user-account-page-title').remove();
+$('body > .page-title').remove();
 $('body > .page-content').replaceWith(html);
 
 window.setCurrentPath('<%= user_orders_path %>')
