--- a/app/views/users/orders/show.js.erb
+++ b/app/views/users/orders/show.js.erb
@@ -1,6 +1,7 @@
 html = '<%=j  render(template: 'spree/orders/show') %>';
 
 $('body > .user-account-page-title').remove();
+$('body > .page-title').remove();
 $('body > .page-content').replaceWith(html);
 
 window.setCurrentPath('<%= user_order_path(@order) %>');
