--- a/app/views/products/base/search.html.slim
+++ b/app/views/products/base/search.html.slim
@@ -1,9 +1,4 @@
 ruby:
-  js_tracker = ''
-  if @search_collection.present?
-    js_tracker = "track.search('#{j analytics_label(:search_query, @search_collection.query_string)}');"
-  end
-
   init_product_collection_moodboard_links = "
     initProductCollectionMoodboardLinks({
       container: '.category .products-collection',
@@ -16,12 +11,11 @@ ruby:
 = content_for :inline_javascript do
   = raw "$('.img-product').hoverable();"
   = init_product_collection_moodboard_links
-  = js_tracker
 
 .page-title.default style="background-color:#EDDCEF;"
   .container
     .page-title--details
-      - if results.any?
+      - if @results.any?
         h1.no-padding-bottom Results for "#{params[:q]}"
       - else
         h1.no-padding-bottom Sorry
@@ -34,14 +28,14 @@ ruby:
         .col.col-md-12
           | Um, you need to actually search for something
 
-    - if results.none?
+    - if @results.none?
       .row.relative
         .col.col-md-12
           p
           | Don't sweat it. #{link_to('Browse our dresses', dresses_path)}
 
     - else
-      - results.products.each_slice(4) do |products|
+      - @results.products.each_slice(4) do |products|
         .row.relative
           = render partial: 'products/collections/product', collection: products, as: :product
           .clearfix.visible-sm-block.visible-xs-block
